# text-reminder

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/msg/: mod.rs
src/parse/: mod.rs
