[package]
name = "text_reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["std"] }
clap = { version = "4.1.1", features = ["derive"] }
clokwerk = "0.4.0"
dotenv = "0.15.0"
tokio = {version = "0.2", features = ["full"]}
twilio = "1.0.0"
